<resources>
    <string name="app_name">DroidSoftThird</string>
    <string name="Logout">Logout</string>
    <string name="profile_page">プロフィール画面</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tab_1st">オススメ</string>
    <string name="tab_2nd">スケジュール</string>
    <string name="tab_3rd">マップ</string>
    <string name="group_name">コミュニティ名</string>
    <string name="group_introduction">コミュニティの説明文を入力(500字以内)\n\n 例) 毎週水曜日に図書館に集まって、それぞれの勉強や作業をしましょう。</string>
    <string name="group_detail">詳細情報</string>
    <string name="group_type">取り組み対象</string>
    <string name="no_set">指定なし</string>
    <string name="activity_area">活動地域</string>
    <string name="facility_environment">利用施設/環境</string>
    <string name="event_frequency">イベント頻度</string>
    <string name="age_range">年齢幅</string>
    <string name="number_persons">人数制限</string>
    <string name="gender_restriction">同性のみ</string>
    <string name="seminar">セミナー</string>
    <string name="workshop">ワークショップ</string>
    <string name="mokumoku">もくもく会</string>
    <string name="other">その他</string>
    <string name="Next">次へ</string>
    <string name="done">完了</string>
    <string name="cancel">キャンセル</string>
    <string name="library">図書館</string>
    <string name="rental_space">レンタルスペース</string>
    <string name="cafe_restaurant">カフェ・ファミレス</string>
    <string name="study_place">有料自習室</string>
    <string name="online">オンライン</string>
    <string name="park">公園</string>
    <string name="everyday">毎日</string>
    <string name="week">週</string>
    <string name="month">月</string>
    <string name="on">On</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="message_no_network">No network connection.</string>
    <string name="message_unknown">Unknown error.</string>
    <string name="title_sign_in_error">Sign In Error</string>
    <string name="option_retry">Retry</string>
    <string name="option_exit">Exit</string>
    <string name="progress_uploading">Uploading..</string>
    <string name="upload_success">アップロード完了</string>
    <string name="upload_fail">アップロード失敗</string>
    <string name="group_add">コミュニティの追加</string>
    <string name="group_added">コミュニティを追加しました。</string>
    <string name="nickname">ニックネーム</string>
    <string name="gender">性別</string>
    <string name="gender_no_edit">性別(編集不可)</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="gender_private">非公開</string>
    <string name="age">年齢</string>
    <string name="age_no_edit">年齢(編集不可)</string>
    <string name="residential_area">居住地域</string>
    <string name="edit_a_comment">コメントを入力してください。</string>
    <string name="profile_add">プロフィールを追加しました。</string>
    <string name="editProfile">プロフィールを編集</string>
    <string name="newest_first_order">新着順</string>
    <string name="schedule">スケジュール</string>
    <string name="map">マップ</string>
    <string name="input_a_group_name">コミュニティ名を入力(20字以内)</string>
    <string name="input_group_introduction">コミュニティの紹介文を記入してください。</string>
    <string name="register">登録</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Log_out">ログアウト</string>
    <string name="input_a_name">名前を入力してください。</string>
    <string name="register_profile">プロフィールを登録</string>
    <string name="search">検索</string>
    <string name="my_page">マイページ</string>
    <string name="video">ビデオ</string>
    <string name="type_a_message">メッセージを入力してください。</string>
    <string name="send_picture">画像を送信</string>
    <string name="send_file">ファイルを送信</string>
    <string name="group_info">コミュニティ情報</string>
    <string name="audio_permission_not_available">録音機能を使用するため、アクセス権限が求められています。</string>
    <string name="permisson_is_required">ファイルへのアクセス権限が求められています。</string>
    <string name="audio_permission_granted">オーディオへのアクセスが許可されました。録音を開始します。</string>
    <string name="audio_permission_denied">オーディオへのアクセスが拒否されました。</string>
    <string name="audio_permission_available">オーディオへのアクセスが許可されています。録音を開始します。</string>
    <string name="permisson_is_denied">permission is denied.</string>
    <string name="test_aaa">あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</string>
    <string name="download_clicked_file_or_not">クリックしたファイルをダウンロードしますか。</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="name">名前</string>
    <string name="self_introduction">自己紹介</string>
    <string name="please_attach_background_image">背景画像を添付しましょう</string>
    <string name="group_register">コミュニティを登録</string>
    <string name="JoinIn">参加</string>
    <string name="confrimation">確認</string>
    <string name="confrimation_join_group">このコミュニティに参加しますか？</string>
    <string name="confrimation_leave_group">本当にコミュニティから抜けますか？</string>
    <string name="input_profile">プロフィール入力</string>
    <string name="group">コミュニティ</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="schedule_calendar">カレンダー</string>
    <string name="schedule_list">リスト</string>
    <string name="filter">フィルター</string>
    <string name="week_mode">週表示</string>
    <string name="on_progress">しばらくお待ちください</string>
    <string name="event_time">%d時〜%d時</string>

    <!--ScheduleGeneral-->

    <!--ScheduleCreate-->
    <string name="schedule_event_name_hint">イベント名を入力(20字以内)</string>
    <string name="schedule_event_comment_hint">コメントを入力(500字以内)\n\n 例) 今週の火曜日にカフェに集まって、英会話しませんか？</string>
    <string name="schedule_create_date">日付</string>
    <string name="schedule_create_time">時間</string>
    <string name="schedule_create_location">場所</string>
    <string name="schedule_create_group">コミュニティ</string>
    <string name="schedule_create_date_hint">イベントの日付を入力してください</string>
    <string name="schedule_create_time_start">開始時刻</string>
    <string name="schedule_create_time_end">終了時刻</string>

    <!-- ログイン画面 -->
    <string name="email">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_guest">SIGN IN AS GUEST</string>
    <string name="sign_in_create_account">Sign in or create an account</string>
    <string name="or">または</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="user_continue">CONTINUE</string>
    <string name="create_account">アカウント作成</string>
    <string name="terms_and_conditions">By continuing, you agree to our Terms of Service. We’ll
        handle your data according to our Privacy Policy.</string>
    <string name="feature_not_available">Feature not available</string>
    <string name="dismiss">DISMISS</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="sign_up">新しくはじめる</string>
    <string name="profile">プロフィール</string>
    <string name="edit_profile">編集</string>
    <string name="user_name">ユーザー名</string>
    <string name="profile_register">送信</string>
    <string name="positive_ok">OK</string>
    <string name="negative_cancel">キャンセル</string>
    <string name="profile_input_age_dialog_title">年齢を入力してください</string>
    <string name="age_unit">歳</string>
    <string name="non_selected">指定なし</string>

    <string name="profile_edit_select_gender_request">性別を選択してください</string>
    <string name="profile_edit_gender_male_item">男性</string>
    <string name="profile_edit_gender_female_item">女性</string>
    <string name="profile_edit_gender_no_answer_item">無回答</string>
    <string name="map_place_name">場所名</string>
    <string name="map_address">住所</string>
    <string name="map_category">カテゴリー</string>
    <string name="map_memo">メモ</string>
    <string name="map_cancel" translatable="false">キャンセル</string>
    <string name="general_confirm">確定</string>
    <string name="select_birthday">誕生日を入力してください</string>
    <string name="co_working_space">コーワキングスペース</string>
    <string name="paid_study_space">有料自習室</string>
    <string name="daily">毎日</string>
    <string name="weekly">週ごと</string>
    <string name="monthly">月ごと</string>
    <string name="clear_filter">クリア</string>
    <string name="group_condition_filter">絞り込み</string>
    <string name="select_area">活動地域を選択してください</string>
    <string name="select_group">コミュニティから検索</string>
    <string name="show_group_asscociated_events">コミュニティに紐づいたイベントを表示します。</string>
    <string name="no_groups_found">参加可能なコミュニティがありません。</string>
    <string name="individual_task">別々: 個々の課題</string>
    <string name="shared_goal">一緒: 共通の目標</string>
    <string name="irregularly">不定期</string>
    <string name="style">学習・作業スタイル</string>
    <string name="quiet_focus">静かに集中</string>
    <string name="fun_chat">楽しくワイワイ</string>
    <string name="availability">%s 人</string>
    <string name="group_condition_filter_confirm">コミュニティを検索</string>
    <string name="join_or_create_group">コミュニティに参加、あるいはコミュニティを作成してください。</string>
    <string name="group_intro">コミュニティ紹介</string>
    <string name="leave_group">コミュニティを抜ける</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="no_events_on_selected_date">選択した日付にイベントがありません。イベントがある日付には青い目印が表示されます。</string>
    <string name="event_name">イベント名</string>
    <string name="event_comment">コメント</string>
    <string name="event_register">イベントを登録</string>
    <string name="birthday">生年月日</string>
    <string name="login">ログイン</string>
    <string name="new_password">新しいパスワード</string>
    <string name="confirm_new_password">新しいパスワード(確認)</string>

</resources>