<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ProfileCreateFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.droidsoftthird.ProfileCreateViewModel" />
    </data>
<!--TODO　キレイに表示されるよう調整する。-->

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="398dp"
        android:layout_height="6dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        />

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/image_frame"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/edit_background_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/radius_rectangular"
            android:elevation="1dp"
            android:src="@drawable/ic_baseline_image_24"
            app:imageURI="@{viewModel.backgroundImageUri}"

            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:clickable="true"
            android:elevation="2dp"
            android:src="@drawable/placeholder_human"
            app:imageURI="@{viewModel.userImageUri}" />


    </FrameLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_frame"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.userName}"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/self_introduction"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.userIntroduction}"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/edit_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_comment" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@={viewModel.gender}"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/edit_gender"
        app:layout_constraintTop_toBottomOf="@+id/edit_gender">
        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/male" />
        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/female" />
        <RadioButton
            android:id="@+id/radio_button_gender_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/gender_private" />
    </RadioGroup>

    <TextView
        android:id="@+id/profile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seek_bar_age"
        android:valueFrom="10"
        android:valueTo="100"
        android:stepSize="1"
        android:value="@={viewModel.age}"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_age"
        app:layout_constraintStart_toEndOf="@+id/profile_age"
        app:layout_constraintTop_toBottomOf="@+id/profile_age"
        />

    <TextView
        android:id="@+id/edit_age"
        android:layout_width="30dp"
        android:layout_height="18dp"
        app:floatToIntString="@{viewModel.age}"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/seek_bar_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seek_bar_age"
        app:layout_constraintTop_toTopOf="@+id/seek_bar_age" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_residential_area"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="0dp"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_age">

        <TextView
            android:id="@+id/residential_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/residential_area"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_residential_area"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/radius_rectangular_prime"
            android:gravity="center"
            android:text="@string/no_set"
            app:city="@{viewModel.city_r}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/residential_area"
            app:layout_constraintTop_toBottomOf="@+id/residential_area"
            app:prefecture="@{viewModel.prefecture_r}" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:text="@string/register_profile"
        android:backgroundTint="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_residential_area"
        android:onClick="@{() -> viewModel.createUserProfile()}"/>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </RelativeLayout>
</layout>