<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable
            name="viewModel"
            type="com.example.droidsoftthird.ProfileEditViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileEditFragment"
        android:background="@color/primary_light">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:indeterminate="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="398dp"
            android:layout_height="6dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/btn_background_image"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="247dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:scaleX="1"
                    android:scaleY="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:imageURI="@{viewModel.userDetail.backgroundImage}"
                    android:src="@drawable/ic_baseline_image_24"

                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_background_image"
                    android:hint="@string/user_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.userDetail.userName}"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/group_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/group_introduction"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_user_intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.userDetail.userIntro}"
                        android:inputType="textMultiLine"
                        />

                </com.google.android.material.textfield.TextInputLayout>



                <View
                    android:id="@+id/divider_intro"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintTop_toBottomOf="@+id/group_intro" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_intro"
                    android:background="@color/primary_light">

                    <include
                        android:id="@+id/include_profile_edit_gender"
                        layout="@layout/include_item_profile_edit"
                        bind:title="@{@string/profile_edit_gender}"
                        bind:drawable="@{@drawable/ic_baseline_date_range_24}"
                        bind:text="@{viewModel.userDetail.gender}"
                        bind:click="@{viewModel::showGenderDialog}"
                        android:clickable="true" />

                    <include
                        android:id="@+id/include_profile_edit_age"
                        layout="@layout/include_item_profile_edit"
                        bind:title="@{@string/profile_edit_age}"
                        bind:drawable="@{@drawable/ic_baseline_date_range_24}"
                        bind:text="@{viewModel.userDetail.age}"
                        bind:click="@{viewModel::showAgeDialog}"
                        android:clickable="true" />
                        <!--TODO Drawableを変更する-->

                    <include
                        android:id="@+id/include_profile_area"
                        layout="@layout/include_item_profile_edit"
                        bind:title="@{@string/profile_edit_activity_area}"
                        bind:drawable="@{@drawable/ic_baseline_date_range_24}"
                        bind:text="@{viewModel.userDetail.area}"
                        bind:click="@{viewModel::showAreaDialog}"
                        android:clickable="true" />
                    <!--TODO Drawableを変更する-->


                <Button
                    android:id="@+id/btn_to_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                    android:enabled="@{viewModel.isEnableRegister}"
                    android:onClick="@{() -> viewModel.editProfile()}"
                    android:backgroundTint="@color/primary_dark"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>
</layout>